# libzxcvbn

./: .gitignore  LICENSE  Makefile.am  README  SConstruct  autogen.sh  configure  configure.ac  zxcvbn.c  zxcvbn.h  zxcvbn_cli.c
